# aboalisina_rest_project

./: pyproject.toml
config/: db.sqlite3
config/HOME_APP/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
config/HOME_APP/migrations/: 0001_initial.py
config/PERSON_IDEA/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
config/PERSON_IDEA/migrations/: 0001_initial.py
config/accounts/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
config/accounts/migrations/: 0001_initial.py
config/blog/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
config/blog/migrations/: 0001_initial.py  0002_alter_post_options_alter_post_category_options.py
config/config/: settings.py  urls.py
config/school/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
config/school/migrations/: 0001_initial.py  0002_studenteducationinformation.py
