[project]
name = "source-aboalisina"
version = "0.1.0"
description = ""
authors = [
    {name = "ali-talebi",email = "alitalebishahroodi@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "django (==4.2.*)",
    "djangorestframework (>=3.17.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
