[project]
name = "source-aboalisina"
version = "0.1.0"
description = ""
authors = [
    {name = "ali-talebi",email = "alitalebishahroodi@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "django (==4.2.*)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "django-ckeditor (>=6.7.3,<7.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "drf-yasg (>=1.21.15,<2.0.0)",
    "django-jalali-date (>=2.0.0,<3.0.0)",
    "django-jalali (>=7.4.0,<8.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
